--- a/style.css
+++ b/style.css
@@ -224,7 +224,7 @@ margin: 0 100px 0 100px;
     margin-right: 20px;
 }
 .nav_items{
-    display: flex;
+    display: none;
     align-items: center;
     height: 20px;
     position: absolute;
