--- a/style.css
+++ b/style.css
@@ -293,6 +293,12 @@ margin: 0 100px 0 100px;
     align-items: center;
     margin-bottom: 20px;
 }
+.form_select{
+    width: 406px;
+    height: 46px;
+    border: none;
+    outline:none;
+}
 .form_input{
     width: 406px;
     height: 46px;
