--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ body{
  justify-content: center;
  align-items: center;
  position: relative;
+ background-color: #000;
 }
 
 .header_nav{
@@ -258,16 +259,21 @@ margin: 0 100px 0 100px;
 .implement_wrap{
     display: flex;
     margin-top: 120px;
-
+    align-items: center;
+    margin-bottom: 200px;
 }
 .implement_img{
     margin-left: 270px;
     margin-right: 140px;
-    margin-bottom: 140px;
+
 }
 .implement_content{
     width: 408px;
-    margin-top: 200px;
+
+}
+.implement_content p{
+    font-weight: 700;
+    margin-bottom: 20px;
 }
 /* 4block*/
 .singUp{
@@ -404,20 +410,15 @@ margin: 0 100px 0 100px;
     .footer_wrap{
         display: flex;
         align-items: center;
-        justify-content: space-between;
-        padding-top: 60px;
-        padding-bottom: 60px;
-    }
-    .logo_footer{
-        margin-right: 51px;
+        justify-content: space-around;
+        padding: 36px 0;
     }
     .footer_nav a{
         color: #FFFFFF;
         text-decoration: none;
         position: relative;
         border-right:1px solid #4E4E4E;
-        padding-right:20px;
-        padding-left: 20px;
+        padding-right:5px;
     }
     .footer_nav a:hover{
         color: #00AFDB;
@@ -427,4 +428,120 @@ margin: 0 100px 0 100px;
         border: none;
     }
 
+/* catalog*/
+.catalog{
+    background-color: #000;
+}
+.catalog_maintext{
+    font-weight: bold;
+    font-size: 64px;
+    align-items: center;
+    text-align: center;
+    color: #000;
+    margin-bottom: 80px;
+    margin-top: 40px;
+}
+.catalog_grid{
+    width: 1021px;
+    text-align: center;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(3, 320px);
+    grid-gap: 30px;
+}
+.catalog_grid div{
+    font-size: 17px;
+}
+.grid_header{
+    font-weight: 700;
+    font-size: 18px;
+    color: #000;
+    position: relative;
+}
+.grid_header::after{
+    content: "";
+    display: block;
+    width: 100%;
+    height: 1px;
+    background: #000;
+    z-index: 1;
+    position: absolute;
+    top: 31px;
+}
+.catalog_text{
+    text-align: center;
+    margin: 50px 0;
+}
+.catalog_btn{
+    text-align: center;
+    margin-bottom: 90px;
+}
 
+/* Contacts*/
+.contacts{
+    text-align: center;
+}
+.contacts_title{
+    text-align: center;
+    margin: 30px 0;
+    color: #000;
+    font-size: 64px;
+}
+.contacts_wrap{
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    margin: 40px 0;
+    
+}
+.contacts_left{
+    width: 167px;
+    margin-right: 40px;
+}
+.contacts_left p{
+    line-height: 22px;
+}
+.contacts_right{
+    display: flex;
+    flex-direction: column;
+    
+}
+.contacts_right a{
+    padding: 6px 0;
+    color: #4E4E4E;
+    text-decoration: none;
+}
+.contacts_subtitle{
+    padding-bottom: 15px;
+}
+.map{
+    margin-bottom: 20px;
+}
+.contacts_btn{
+    margin-bottom: 40px;
+}
+
+
+.FAQ_wrap{
+    width: 1000px;
+    margin: 0 auto;
+}
+.FAQ_tittle{
+    text-align: center;
+    margin: 20px 0;
+}
+.que{
+    padding: 20px 0;
+}
+.ans a {
+    text-decoration: none;
+    color: inherit;
+    font-weight: 700;
+}
+.ans a:hover {
+text-decoration: underline;
+}
+.contacts_btn{
+    padding: 20px 0;
+    text-align: center;
+}
