--- a/style.css
+++ b/style.css
@@ -545,3 +545,9 @@ text-decoration: underline;
     padding: 20px 0;
     text-align: center;
 }
+
+@media (max-width: 1600px){
+    .container{
+       width: 1300px;
+    }
+}
